vlib/v/parser/tests/expected_type_enum_err.vv
module main

enum Test { bar }

fn main() {
	if `c` == .bar {}
}
